--- a/make-talk-06/main.tex
+++ b/make-talk-06/main.tex
@@ -58,6 +58,19 @@
 % START START START START START START START START START START START START START
 
 \begin{frame}{\only<1>{Equation of a line (fitting $a$ and $b$ to measurements $y$ versus $x$)}\only<2>{Equation of a plane (height $y$ versus 2D coordinates $x_1$ and $x_2$)}\only<3>{Equation of a hyperplane (N-dimensional)}\only<4>{General linear transformation: many inputs, many outputs}\only<5>{Pass through function $f$ to make it non-linear (more on that later)}}
+\vspace{0.25 cm}
+\begin{onlyenv}<1>
+\begin{center}
+\includegraphics[width=0.4\linewidth]{equation-for-a-line.pdf}
+\end{center}
+\vspace{-1.5 cm}
+\end{onlyenv}\begin{onlyenv}<2>
+\begin{center}
+\includegraphics[width=0.4\linewidth]{equation-for-a-plane.pdf}
+\end{center}
+\vspace{-1.75 cm}
+\end{onlyenv}
+
 \begin{columns}
 \column{1.1\linewidth}
 \renewcommand{\arraystretch}{1.5}
