--- a/make-talk-01/main.tex
+++ b/make-talk-01/main.tex
@@ -57,8 +57,94 @@
 
 % START START START START START START START START START START START START START
 
-\begin{frame}{TITLE}
-CONTENT
+\begin{frame}{Welcome!}
+\begin{center}
+\includegraphics[width=0.5\linewidth]{SCIPY-2024-no-textArtboard+1@3x.png}
+\end{center}
 \end{frame}
+
+\begin{frame}{What this session is about}
+\Large
+\vspace{0.5 cm}
+
+The SciPy Teen Track is an introduction to scientific problem-solving with Python.
+
+\vspace{1 cm}
+\uncover<2->{That's a broad topic: it could involve any academic science, data science, or business analytics.}
+
+\vspace{1 cm}
+\uncover<3->{I decided to focus on machine learning.}
+\end{frame}
+
+\begin{frame}{Schedule}
+\vspace{0.5 cm}
+
+\large
+\textcolor{darkblue}{Monday, July 8, 2024}
+
+\small
+\vspace{0.1 cm}
+{\bf 9:30am -- 12pm:}
+
+\normalsize
+\vspace{0.1 cm}
+\begin{itemize}
+\item Python review: just enough Python knowledge for the rest of the session
+\item Mathematical background: just the concepts
+\item Project: fitting a theoretical model to experimental measurements
+\end{itemize}
+
+\small
+\vspace{0.1 cm}
+{\bf 1pm -- 3:30pm:}
+
+\normalsize
+\vspace{0.1 cm}
+\begin{itemize}
+\item Scikit-Learn, a machine learning library
+\item From linear fitting to neural networks
+\end{itemize}
+
+\large
+\vspace{0.25 cm}
+\textcolor{darkblue}{Tuesday, July 9, 2024}
+
+\small
+\vspace{0.1 cm}
+{\bf 1pm -- 3:30pm:}
+
+\normalsize
+\vspace{0.1 cm}
+\begin{itemize}
+\item Big data: the complete works of Shakespeare
+\item Project: building a language model
+\item Large language models (e.g.\ ChatGPT)
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Software}
+\Large
+\vspace{0.5 cm}
+
+We'll be using JupyterLite, a variant of Jupyter that runs in your web browser, so there's nothing to install.
+
+\vspace{1 cm}
+\uncover<2->{I'll provide URLs and guide you through using Jupyter as needed.}
+\end{frame}
+
+\begin{frame}{Who am I?}
+\Large
+\vspace{0.5 cm}
+
+Jim Pivarski, a computational physicist at Princeton University.
+
+\normalsize
+\vspace{1 cm}
+I studied particle physics at CMU and Cornell and helped prepare the Large Hadron Collider at CERN for the Higgs boson discovery.
+
+\vspace{0.5 cm}
+I started using Python (version 2.1!) in 2002 and wrote my first package in 2005---for fitting, which is what we'll be doing today. I spent some years as a data scientist in the private sector, but now I'm developing scientific software for particle physicists.
+\end{frame}
+
 
 \end{document}
