last corrections from a JupyterLite test

--- a/site/files/03-math-background.ipynb
+++ b/site/files/03-math-background.ipynb
@@ -182,6 +182,7 @@
    "outputs": [],
    "source": [
     "plt.imshow(two_dimensional_array)\n",
+    "plt.gca().invert_yaxis()\n",
     "plt.colorbar()"
    ]
   },
@@ -190,7 +191,7 @@
    "id": "8a411fbd-0347-4849-a24a-01911fa87966",
    "metadata": {},
    "source": [
-    "Or we could show the same thing as contour lines. (Note that the $y$ axis is flipped vertically between these two visualizations.)"
+    "Or we could show the same thing as contour lines."
    ]
   },
   {
@@ -272,6 +273,7 @@
    "outputs": [],
    "source": [
     "plt.imshow(three_spots)\n",
+    "plt.gca().invert_yaxis()\n",
     "plt.colorbar()"
    ]
   },
