--- a/site/files/05-scikit-learn.ipynb
+++ b/site/files/05-scikit-learn.ipynb
@@ -457,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "\n",
     "predictions = linear4D.predict(measurements4D[:, [0, 1, 2]])[:, 0]\n",
     "actuals = measurements4D[:, 3]\n",
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "1d374ad1-16af-4445-bee7-28b1c543f8d7",
    "metadata": {},
    "outputs": [
