--- a/site/files/10-shakespeare.ipynb
+++ b/site/files/10-shakespeare.ipynb
@@ -1442,7 +1442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_db = sqlite3.connect(\"/home/jpivarski/storage/data/google-5-grams-2009-consolidated/google-5-grams-consolidated.db\")\n",
+    "big_db = sqlite3.connect(\"/Users/jpivarski/big.db\")\n",
     "\n",
     "def next_words(words, count_per_century, top_n):\n",
     "    # try to match 4 words and return the 5th\n",
