add material from CoDaS-HEP, including history of AI

--- a/make-talk-06/main.tex
+++ b/make-talk-06/main.tex
@@ -341,8 +341,8 @@ Y.\ Zhang, I.\ Kim, J.\ Sanes, {\it The most numerous ganglion cell type of the 
 \begin{frame}{These ideas have been studied for a long time}
 \vspace{0.2 cm}
 \begin{columns}
-\column{1.15\linewidth}
-\includegraphics[width=\linewidth]{ups-and-downs-of-ai.png}
+\column{1.1\linewidth}
+\only<1>{\includegraphics[width=\linewidth]{ups-and-downs-of-ai.png}}\only<2>{\includegraphics[width=\linewidth]{ups-and-downs-of-ai-overlay.png}}
 \end{columns}
 \end{frame}
 
